# src/app/database/models/movie.js
@@ -1,40 +1,41 @@
 const { Model } = require('sequelize');
 module.exports = (sequelize, DataTypes) => {
-  class Movie extends Model {
-  }
-  Movie.init({
-    title: {
-      type: DataTypes.STRING,
-      allowNull: false
-    },
-    image: {
-      type: DataTypes.STRING,
-      allowNull: false
-    },
-    description: {
-      type: DataTypes.TEXT,
-      allowNull: false
-    },
-    category_id: {
-      type: DataTypes.INTEGER,
-      allowNull: false,
-      references: {
-        model: 'movie_categories',
-        key: 'id'
+  class Movie extends Model {}
+  Movie.init(
+    {
+      title: {
+        type: DataTypes.STRING,
+        allowNull: false
       },
-      onUpdate: 'CASCADE',
-      onDelete: 'CASCADE'
+      image: {
+        type: DataTypes.STRING,
+        allowNull: false
+      },
+      description: {
+        type: DataTypes.TEXT,
+        allowNull: false
+      },
+      category_id: {
+        type: DataTypes.INTEGER,
+        allowNull: false,
+        references: {
+          model: 'movie_categories',
+          key: 'id'
+        },
+        onUpdate: 'CASCADE',
+        onDelete: 'CASCADE'
+      },
+      rating: {
+        type: DataTypes.INTEGER,
+        allowNull: false
+      }
     },
-    rating: {
-      type: DataTypes.INTEGER,
-      allowNull: false
-    },
-  },
-  {
-    sequelize,
-    modelName: 'Movie',
-    tableName: 'movies',
-    timestamps: true
-  });
+    {
+      sequelize,
+      modelName: 'Movie',
+      tableName: 'movies',
+      timestamps: true
+    }
+  );
   return Movie;
 };
